Check Unique Planet name and function to show status

--- a/SpaceStrategy/SpaceStrategy/SpaceStrategy.csproj
+++ b/SpaceStrategy/SpaceStrategy/SpaceStrategy.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Building.cs" />
     <Compile Include="Colony.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -54,6 +55,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Planet.cs" />
+    <Compile Include="PlanetCoordinates.cs" />
     <Compile Include="PlanetObject.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
