--- a/SpaceStrategy/SpaceStrategy/SpaceStrategy.csproj
+++ b/SpaceStrategy/SpaceStrategy/SpaceStrategy.csproj
@@ -56,11 +56,13 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="HeapResource.cs" />
+    <Compile Include="Pasture.cs" />
     <Compile Include="Planet.cs" />
     <Compile Include="PlanetCoordinates.cs" />
     <Compile Include="PlanetObject.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Quarry.cs" />
     <Compile Include="Resource.cs" />
     <Compile Include="Sawmill.cs" />
     <Compile Include="SpaceCoordinates.cs" />
