--- a/SpaceStrategy/SpaceStrategy/SpaceStrategy.csproj
+++ b/SpaceStrategy/SpaceStrategy/SpaceStrategy.csproj
@@ -56,6 +56,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="HeapResource.cs" />
+    <Compile Include="Market.cs" />
     <Compile Include="Pasture.cs" />
     <Compile Include="Planet.cs" />
     <Compile Include="PlanetCoordinates.cs" />
