--- a/SpaceStrategy/SpaceStrategy/SpaceStrategy.csproj
+++ b/SpaceStrategy/SpaceStrategy/SpaceStrategy.csproj
@@ -49,6 +49,24 @@
     <Compile Include="Building.cs" />
     <Compile Include="Colony.cs" />
     <Compile Include="Food.cs" />
+    <Compile Include="Form1 Parts\ButtonClicksForm1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1 Parts\DefineSomethingForm1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1 Parts\SelectedListsChangedForm1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1 Parts\ShowSomethingForm1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1 Parts\TimerTickForm1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Form1 Parts\UpdateWindowsForm1.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -56,6 +74,9 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="HeapResource.cs" />
+    <Compile Include="Form1 Parts\InitsForm1.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Market.cs" />
     <Compile Include="Pasture.cs" />
     <Compile Include="Planet.cs" />
