--- a/SpaceStrategy/SpaceStrategy/SpaceStrategy.csproj
+++ b/SpaceStrategy/SpaceStrategy/SpaceStrategy.csproj
@@ -46,9 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Building.cs" />
+    <Compile Include="Buildings\Building.cs" />
     <Compile Include="Colony.cs" />
-    <Compile Include="Food.cs" />
+    <Compile Include="Registry.cs" />
+    <Compile Include="Resources\Food.cs" />
     <Compile Include="Form1 Parts\ButtonClicksForm1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -73,23 +74,23 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="HeapResource.cs" />
+    <Compile Include="Resources\HeapResource.cs" />
     <Compile Include="Form1 Parts\InitsForm1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Market.cs" />
-    <Compile Include="Pasture.cs" />
+    <Compile Include="Buildings\Pasture.cs" />
     <Compile Include="Planet.cs" />
     <Compile Include="PlanetCoordinates.cs" />
     <Compile Include="PlanetObject.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Quarry.cs" />
-    <Compile Include="Resource.cs" />
-    <Compile Include="Sawmill.cs" />
+    <Compile Include="Buildings\Quarry.cs" />
+    <Compile Include="Resources\Resource.cs" />
+    <Compile Include="Buildings\Sawmill.cs" />
     <Compile Include="SpaceCoordinates.cs" />
-    <Compile Include="Stone.cs" />
-    <Compile Include="Wood.cs" />
+    <Compile Include="Resources\Stone.cs" />
+    <Compile Include="Resources\Wood.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
